# opal

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Package.swift  README.md  RELEASE_NOTES.md  build.rs.test  build.sh  opal.swift  opal_native  rebuild.sh  test_checksum.c
.agent/: CONTINUITY.md
.build/: build.db  plugin-tools.yaml  release.yaml  workspace-state.json
.build/arm64-apple-macosx/release/: Opal  description.json
.build/arm64-apple-macosx/release/AutoUpdate.build/: AutoUpdate.d  output-file-map.json  sources
.build/arm64-apple-macosx/release/AutoUpdate.build/include/: AutoUpdate-Swift.h  module.modulemap
.build/arm64-apple-macosx/release/ModuleCache/2UHWOJU7ZQLJ2/: Accessibility-RCJSN2GG3RAR.pcm  ApplicationServices-3NXEUUZF9JJBD.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  CUPS-1HLHMKUB322XA.pcm  ColorSync-3EIM4S8RXNRVI.pcm  CoreData-1KHK1L2CYC2N6.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  CoreGraphics-1PSDCAYCIV3T9.pcm  CoreImage-39ZO87840M5PP.pcm  CoreText-3FAL1B4J38DIR.pcm  CoreTransferable-27T896KGHFB3R.pcm  CoreVideo-DBBGB2LXU3HG.pcm  DataDetection-R5W4QHNMPWVH.pcm  DeveloperToolsSupport-3SUCMSK9ZS2JA.pcm  DiskArbitration-3LBJF5I58QD8.pcm  Dispatch-R76HXUP80TVL.pcm  IOSurface-26455DPS9NDS0.pcm  ImageIO-2ZSF831VT29UB.pcm  LocalAuthentication-26H9AZG3KEECH.pcm  MachO-20RPYVQSX341K.pcm  Metal-1GCZV9N85NJOH.pcm  OSLog-218FBXNFJGY61.pcm  ObjectiveC-1G8H182PQX3QE.pcm  OpenGL-H89XJT7GTCP.pcm  QuartzCore-39A8LQKF980J1.pcm  Security-3QCVXOV25KK54.pcm  Spatial-1JZLH83HN83CS.pcm  SwiftShims-2IMTS4WWRU7VJ.pcm  SwiftUI-3DCHKT5UWXXCX.pcm  SwiftUICore-86HIVXUC6WOA.pcm  Symbols-3KC1789KJFX94.pcm  UniformTypeIdentifiers-1OLJP4K3PLM48.pcm  XPC-T0ZXCAST7PE3.pcm  _AvailabilityInternal-2YSBQADOLX02V.pcm  _Builtin_float-19KE09ZDXQ6Q3.pcm  _Builtin_intrinsics-19KE09ZDXQ6Q3.pcm  _Builtin_inttypes-19KE09ZDXQ6Q3.pcm  _Builtin_limits-19KE09ZDXQ6Q3.pcm  _Builtin_stdarg-19KE09ZDXQ6Q3.pcm  _Builtin_stdatomic-19KE09ZDXQ6Q3.pcm  (+18 more)
.build/arm64-apple-macosx/release/ModuleCache/9OY3GUEOT4KO/: Accessibility-RCJSN2GG3RAR.pcm  ApplicationServices-3NXEUUZF9JJBD.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  CUPS-1HLHMKUB322XA.pcm  ColorSync-3EIM4S8RXNRVI.pcm  CoreData-1KHK1L2CYC2N6.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  CoreGraphics-1PSDCAYCIV3T9.pcm  CoreImage-39ZO87840M5PP.pcm  CoreText-3FAL1B4J38DIR.pcm  CoreTransferable-27T896KGHFB3R.pcm  CoreVideo-DBBGB2LXU3HG.pcm  (+49 more)
.build/arm64-apple-macosx/release/Modules/: AutoUpdate.swiftdoc  AutoUpdate.swiftmodule  AutoUpdate.swiftsourceinfo  Opal.swiftdoc  Opal.swiftmodule  Opal.swiftsourceinfo  OpalCore.swiftdoc  OpalCore.swiftmodule  OpalCore.swiftsourceinfo
.build/arm64-apple-macosx/release/Opal.build/: Opal.d  Opal.dia  output-file-map.json  sources
.build/arm64-apple-macosx/release/Opal.product/: Objects.LinkFileList
.build/arm64-apple-macosx/release/OpalCore.build/: OpalCore.d  output-file-map.json  sources
.build/arm64-apple-macosx/release/UpdateHelper.build/: output-file-map.json
.cargo/: config.toml
.github/: SUNSHINE_UPDATES.md
.github/workflows/: ci.yml  release.yml
.sisyphus/: boulder.json  ralph-loop.local.md
.sisyphus/drafts/: opal-ghostty-analysis.md  opal-strategic-answers.md  opal-terminal.md
.sisyphus/plans/: opal-terminal.md  opal-v1-strategic-plan.md
Opal/: Package.swift
Opal/Opal.xcodeproj/: project.pbxproj
Opal/Resources/: Opal-chan-design.md  Opal.icns
Opal/Sources/Copal/: opal_ffiFFI.h
Opal/Sources/Opal/: ContentView.swift  LiquidGlassBackground.swift  MetalLiquidGlassBackground.swift  OpalApp.swift  PreferencesView.swift  SettingsView.swift  SidebarView.swift  TabBarView.swift  TerminalMetalView.swift  TerminalView.swift  WindowSettings.swift  WindowUtils.swift
Resources/: Opal.icns
Sources/Copal/: module.modulemap
Sources/OpalNext/: BackgroundProfile.swift  BuildInfo.swift  ContentView.swift  LiquidGlassBackground.swift  OpalNextApp.swift  RuntimeBridge.swift  RuntimeStatusStore.swift  SettingsView.swift  SunshineUpdateStore.swift  TabStore.swift  TerminalAppearance.swift  TerminalView.swift  TerminalViewModel.swift
Sources/OpalNextCore/: opal_ffi.swift
docs/website/: index.html
homebrew/: opal.rb
opal-ai/: Cargo.toml
opal-ai/src/: context.rs  error.rs  lib.rs  types.rs
opal-ai/src/providers/: mod.rs  ollama.rs  openrouter.rs
opal-core/: Cargo.toml
opal-core/src/: config.rs  input.rs  lib.rs  pty.rs  terminal.rs
opal-core/tests/: terminal_tests.rs
opal-ffi/: Cargo.toml  build.rs
opal-ffi/src/: lib.rs  renderer_bridge.rs  terminal_handle.rs
opal-renderer/: Cargo.toml
opal-renderer/src/: lib.rs  renderer.rs  shaders.rs  terminal_renderer.rs  text.rs
opal-renderer/src/shaders/: advanced_liquid_glass.rs  advanced_liquid_glass.wgsl  cell.wgsl  cursor.wgsl  liquid_glass.rs  liquid_glass.wgsl
opal-vte/: Cargo.toml
opal-vte/benches/: grid_benchmark.rs  parsing_benchmark.rs
opal-vte/src/: ansi.rs  cell.rs  color.rs  cursor.rs  grid.rs  handler.rs  lib.rs  parser.rs  performer.rs  terminal.rs
opal-vte/tests/: diagnostic_tests.rs  terminal_test_framework.rs
resources/AppIcon.appiconset/: Opal.icns
src/: lib.rs  main.rs
src/config/: mod.rs
src/platform/: macos.rs  mod.rs
src/renderer/: mod.rs
src/sidebar/: mod.rs
src/terminal/: color.rs  input.rs  mod.rs  pty.rs  screen.rs  vte.rs
src/ui/: menu.rs  mod.rs
(+5 files in other folders)
