[package]
name = "opal"
version = "0.1.0"
edition = "2021"
authors = ["Opal Developer <developer@opal-terminal.dev>"]
license = "MIT OR Apache-2.0"
description = "A beautiful, lightning fast terminal for macOS with Liquid Glass design"
repository = "https://github.com/opal-terminal/opal"

[lib]
name = "opal"
path = "src/lib.rs"

[[bin]]
name = "opal"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
anyhow = "1.0"

objc2 = "0.6"
objc2-encode = "2.0"

metal = "0.33"

git2 = "0.19"

portable-pty = "0.8"
nix = { version = "0.27", features = ["process", "fs"] }

tokio = { version = "1", features = ["full"] }

font-kit = "0.13"
freetype = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

directories = "5.0"

chrono = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]

[build-dependencies]

[features]
default = ["metal"]
metal = []
opengl = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
