[workspace]
members = ["opal-core", "opal-renderer", "opal-ffi", "opal-vte"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Opal Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/opal-terminal/opal"
rust-version = "1.75"

[workspace.dependencies]
wgpu = "28.0"
glyphon = "0.10"
cosmic-text = "0.12"
vte = "0.15"
portable-pty = "0.9"
uniffi = "0.29"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6"
thiserror = "1.0"
slotmap = "1.0"
indexmap = "2.0"
parking_lot = "0.12"
auto-palette = "0.5"
palette = "0.7"
nucleo-matcher = "0.3"
syntect = "5.2"
arboard = "3.4"
accesskit = "0.17"
eazy-tweener = "0.4"
git2 = "0.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
debug = true
