[package]
name = "opal-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vte = { workspace = true }
portable-pty = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
slotmap = { workspace = true }
parking_lot = { workspace = true }
anyhow = "1.0"
bytes = "1.5"
crossbeam = "0.8"

[dev-dependencies]
tokio-test = "0.4"
insta = "1.40"
