[package]
name = "opal-vte"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "High-performance terminal emulator engine with AI-native architecture"

[dependencies]
bitflags = "2.4"
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
indexmap = { workspace = true }
slotmap = { workspace = true }
wgpu = { workspace = true, optional = true }

[features]
default = []
gpu = ["wgpu"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parsing_benchmark"
harness = false

[[bench]]
name = "grid_benchmark"
harness = false
